記事オプション返却API追加+UI修正
